expand literature review on data analysis

--- a/index.qmd
+++ b/index.qmd
@@ -96,6 +96,8 @@ gemini_df <- read_csv(here::here("data/gemini_df.csv")) |> as_decision_tbl()
 
 <!-- There are also meta-analysis to synthesize results from multiple studies, but these focus on the results and not consider the decisions made in the analysis. -->
 
+<!-- Conducting qualitative studies through interviews to study how assumptions and decisions are made in data analysis practices takes a significant amount of time and effort, and the findings may not generalize to other contexts. While published research papers may not provide a complete picture of the decision-making process, they do contain valuable information about the choices made by analysts and the rationale behind them. -->
+
 # Introduction
 
 TODO: need references
@@ -126,15 +128,13 @@ In summary, the contribution of this work includes:
 
 # Related work {#sec-background}
 
-## Decision-making in data analysis
+## Analytic decision making in data analysis
 
-Data analysis involves making choices at every step, from initial data collection, data pre-processing to model specification, and post-processing. Each decision represents a branching point where analysts choose a specific path to follow, and the vast number of possible choices analysts can take forms what @gelman2014 describe as the "garden of forking paths". While researchers may hope their inferential results are robust to the specific path taken through the garden, in practice, different choices can lead to substantially different conclusions. This has been empirically demonstrated through "many analyst experiments", where independent research groups analyze the same dataset to address the same research questions with their own chosen analytic approach. A classic example is @silberzahn2018, where researchers reported an odds ratio from 0.89 to 2.93 for the effect of soccer players’ skin tone on the number of red cards awarded by referees. Similar variability has been observed in structural equation modeling [@sarstedt2024], applied microeconomics [@huntington-klein2021], neuroimaging [@botvinik-nezer2020], and ecology and evolutionary biology [@gould2025].
+Data analysis is a complex and iterative process [@jun2022; @jun2022hypothesis; @jun2019] that involves multiple stages, including data collection, cleaning, visualization, modeling, and communication. At each stage, analysts make decisions informed by domain practices, statistical knowledge, and feedback from the data. These decisions, such as which variables to include in a model, how to handle missing data, and which statistical methods to use, act as branching points in the analysis workflow. The full set of possible paths through these branching points form what @gelman2014 describe as the "garden of forking paths". While one might expect well-trained researchers will often converge to similar decision choices, empirical evidence suggests otherwise. "Many analyst experiments" show that independent research groups analyze the same dataset to address the same research questions can arrive at widely different conclusions. For example @silberzahn2018 asks 29 groups of analysts to conduct an analysis to address the same research questions *whether soccer players with dark skin tone are more likely than those with light skin tone to receive red cards from referees*. Researchers reported an estimated effect size from 0.89 to 2.93 in odds ratio, 70% of the teams found a statistically significant positive effect while others don't, and 21 unique combinations of covariates are used by 29 different analyses. Similar experiements has been observed in structural equation modeling [@sarstedt2024], applied microeconomics [@huntington-klein2021], neuroimaging [@botvinik-nezer2020], and ecology and evolutionary biology [@gould2025].
 
-Examples like above have rendered decision-making in data analysis as a subject to study in human computer interaction. To understand how analysts making decisions during data analysis and navigating the garden of forking path, researchers have conducted qualitative interviews with analysts on data analysis practices [@kale2019; @alspaugh2019; @liu_understanding_2020]. Visualization tools have also been explored to communicate the decision process through analytic decision graphics (ADG) [@liu2020]. In fairness machine learning literature, @simson2025 contributed a reusable workflow that supports participatory input to democratize decisions in machine learning algorithms related to fairness, privacy, interpretability and performance. Conducting qualitative studies through interviews to study how assumptions and decisions are made in data analysis practices takes a significant amount of time and effort, and the findings may not generalize to other contexts. While published research papers may not provide a complete picture of the decision-making process, they do contain valuable information about the choices made by analysts and the rationale behind them. With recent advances in Large Language Models (LLMs), it has become possible to automatically extract structured information from unstructured text. This could provide a scalable way to study decision-making practices in data analysis.
+Examples like the above illustrate how analytical decisions introduce uncertainty into data analysis. These uncertainties have been widely discussed for policy recommendation [@APHENA] and their applications in health, finance, and other domains. To help researchers avoid misusing their "researcher degree of freedom", guidelines and checklists have been developed, informed by demonstrations of how such misuse can lead to p-hacking and inflated effect size [@wicherts2016; @simmons2011]. Pre-registration is a common practice in medicine and biostatistics, yet @pang2022 found that this is not well-adopted among HCI researchers. Given the nuanced nature of data analysis, more work have examined how analysts make decisions in practice, through interviews in both academia and industry. These studies include qualitative analysis of analytical decisions [@kale2019], interviews with data analysts about exploratory data analysis practice in industry [@alspaugh2019; @kandel2012], interviews with data workers on how they consider alternatives in data analysis [@liu_understanding_2020], and interviews researchers about their analysis decisions in published studies [@liu2020]. Participatory studies, like in the many analyst experiments, are also used to support participatory input to democratize decisions in fairness machine learning [@simson2025].
 
-## Uncertainty in data analysis
-
-On top of qualitative studies, software tools have also developed to incorporate potential alternatives in the analysis workflow. The `DeclareDesign` package [@blair2019] introduces the MIDA framework for researchers to declare, diagnose, and redesign their analyses to produce a distribution of the statistic of interest, which has been applied in the randomized controlled trial study [@bishop2024]. The `multiverse` package [@multiverse; @liu2021] provides a framework for researchers to conduct multiverse analysis to systematically explore how different choices affect results and to report the range of plausible outcomes that arise from alternative analytic paths.
+In addition to qualitative studies, software tools have developed to help researchers account for alternatives and uncertainties in the analysis workflow and make informed analytical decisions. Examples include `Tea` [@jun2019], which support general statistical analysis; `Tisane` [@jun2022], which guides choices in generalized linear mixed-effects models (GLMMs); and `MetaExplore` [@kale2023], which allows for meta-analysis to account for decision uncertainty (epistemic uncertainty) during the studies. The `DeclareDesign` package [@blair2019] in R introduces the MIDA framework for researchers to declare, diagnose, and redesign their analyses to produce a distribution of the statistic of interest, which has been applied in the randomized controlled trial study [@bishop2024]. Multiverse analysis provides a framework for researchers to conduct multiverse analysis to systematically explore how different choices affect results and to report the range of plausible outcomes that arise from alternative analytic paths. Downstream works expand on how to author and visualize multiverse analysis [@liu2021], create R software for multiverse analysis using tidyverse syntax [@multiverse; @götz2024], and debugging tools [@gu2023].
 
 ## Automatic information extraction with LLMs
 
@@ -707,11 +707,13 @@ We have conducted sensitivity analysis on the text model for obtaining the decis
 
 ## Quality of LLM extraction and validation
 
+Numerous studies have demonstrate the capability of LLMs in various text extraction tasks, but validation is still needed to ensure the quality of the extracted information. Most application tends to focus on comparing with human annotated samples and compute F1 scores from precision and recall.
+
 While the extraction of decisions from literature could be largely automated with LLMs, manual validations remains essential to ensure the quality of the extracted decisions for further analysis. The quality from the LLM ouput directly affects the amount of manual effort needed for validation and standardization. Using a default temperature of 1 and instructing the model to extract original text rather than paraphrase, we find hallucination is not a major issue with Claude and Gemini for this application. While prompt engineering is used in this work to optimize the prompt for decision extraction, an alternative is to fine-tune a local model to improve LLM performance. Such approach could be beneficial for a systematic literature review, although it would require a labelled decision dataset for training and significantly more training efforts.
 
 ## Extracting other types of decisions
 
-As a demonstration, we focus on the modelling decision for the baseline model in the air pollution epidemiology literature. Analyses in this fields often fit multiple models for different health outcomes. Other models, such as distributed lag models and multi-pollutant models are also commonly used to estimate relative risks and the interaction among pollutants. These factors increase the complexity of the decision extraction for LLM, as for additional models,authors often describe only the differences from the baseline model specification, assuming other decisions remain unchanged. The LLMs will need to be able to link the decisions across different models and identify the full set of decision for each model for cross-comparison among papers. 
+As a demonstration, we focus on the modelling decision for the baseline model in the air pollution epidemiology literature. Analyses in this fields often fit multiple models for different health outcomes. Other models, such as distributed lag models and multi-pollutant models are also commonly used to estimate relative risks and the interaction among pollutants. These factors increase the complexity of the decision extraction for LLM, as for additional models,authors often describe only the differences from the baseline model specification, assuming other decisions remain unchanged. The LLMs will need to be able to link the decisions across different models and identify the full set of decision for each model for cross-comparison among papers.
 
 Apart from modelling choices, decisions in data pre-processing are also interesting to compare. For example, in @braga2001, air pollution measures are aggregated from multiple PM10 monitors within the same location into a single value. Different decisions on how values are extracted, imputed, and aggregated are also shown to affect the results. However, these decisions are often not well documented in the literature than the modelling decisions, making it difficult for LLMs to extract them. Proper documentation and reporting of these decisions in future research are needed before our workflow could be applied to pre-processing decisions.
 
@@ -720,10 +722,6 @@ With the advocacy for reproducibility in science, it is expected that more paper
 <!-- Spatial decisions are generally not well captured because it often conducted uniformly as estimating the city individually to accommodate city heterogeneity. Some papers only consider a handful of cities, while in larger studies the individual city effects are then pooled together using random effect. -->
 
 ## Generalizability of the workflow
-
-
-
-
 
 # Conclusion {#sec-conclusion}
 
