--- a/references.bib
+++ b/references.bib
@@ -37,6 +37,18 @@
     doi = {10.21105/joss.01686},
   }
 
+
+@article{jun2022hypothesis,
+  title={Hypothesis formalization: Empirical findings, software limitations, and design implications},
+  author={Jun, Eunice and Birchfield, Melissa and De Moura, Nicole and Heer, Jeffrey and Just, Ren{\'e}},
+  journal={ACM Transactions on Computer-Human Interaction (TOCHI)},
+  volume={29},
+  number={1},
+  pages={1--28},
+  year={2022},
+  publisher={ACM New York, NY}
+}
+
 @Article{multiverse,
     title = {multiverse: Multiplexing Alternative Data Analyses in R Notebooks (Version 0.6.2)},
     author = {Abhraneel Sarma and Alex Kale and Michael Moon and Nathan Taback and Fanny Chevalier and Jessica Hullman and Matthew Kay},
@@ -73,21 +85,6 @@
 	volume = {59},
 	doi = {10.18637/jss.v059.i10},
 	url = {https://doi.org/10.18637/jss.v059.i10},
-	langid = {en}
-}
-
-@Article{jun2022,
-	title = {Hypothesis Formalization: Empirical Findings, Software Limitations, and Design Implications},
-	author = {Jun, Eunice and Birchfield, Melissa and De Moura, Nicole and Heer, Jeffrey and Just, {René}},
-	year = {2022},
-	month = {02},
-	date = {2022-02-28},
-	journal = {ACM Transactions on Computer-Human Interaction},
-	pages = {1--28},
-	volume = {29},
-	number = {1},
-	doi = {10.1145/3476980},
-	url = {https://dl.acm.org/doi/10.1145/3476980},
 	langid = {en}
 }
 
@@ -961,4 +958,392 @@ PMCID: PMC1060882}
 	number = {11},
 	url = {https://journals.lww.com/joem/fulltext/2001/11000/the_lag_structure_between_particulate_air.1.aspx},
 	langid = {canadian}
+}
+
+@inproceedings{harrod2024,
+	title = {From Text to Maps: LLM-Driven Extraction and Geotagging of Epidemiological Data},
+	author = {Harrod, Karlyn K. and Bhandari, Prabin and Anastasopoulos, Antonios},
+	editor = {Dementieva, Daryna and Ignat, Oana and Jin, Zhijing and Mihalcea, Rada and Piatti, Giorgio and Tetreault, Joel and Wilson, Steven and Zhao, Jieyu},
+	year = {2024},
+	month = {11},
+	date = {2024-11},
+	publisher = {Association for Computational Linguistics},
+	pages = {258{\textendash}270},
+	doi = {10.18653/v1/2024.nlp4pi-1.24},
+	url = {https://aclanthology.org/2024.nlp4pi-1.24/},
+	address = {Miami, Florida, USA}
+}
+
+@inproceedings{katz2024,
+	title = {Findings of the Association for Computational Linguistics: EMNLP 2024},
+	author = {Katz, Uri and Levy, Mosh and Goldberg, Yoav},
+	year = {2024},
+	date = {2024},
+	publisher = {Association for Computational Linguistics},
+	pages = {8838--8855},
+	doi = {10.18653/v1/2024.findings-emnlp.516},
+	url = {https://aclanthology.org/2024.findings-emnlp.516},
+	address = {Miami, Florida, USA},
+	langid = {en}
+}
+
+@inproceedings{farzi2024,
+	title = {Get the Best out of 1B LLMs: Insights from Information Extraction on Clinical Documents},
+	author = {Farzi, Saeed and Ghosh, Soumitra and Lavelli, Alberto and Magnini, Bernardo},
+	editor = {Demner-Fushman, Dina and Ananiadou, Sophia and Miwa, Makoto and Roberts, Kirk and Tsujii, Junichi},
+	year = {2024},
+	month = {08},
+	date = {2024-08},
+	publisher = {Association for Computational Linguistics},
+	pages = {266{\textendash}276},
+	doi = {10.18653/v1/2024.bionlp-1.21},
+	url = {https://aclanthology.org/2024.bionlp-1.21/},
+	address = {Bangkok, Thailand}
+}
+
+@article{hu2024,
+	title = {Improving large language models for clinical named entity recognition via prompt engineering},
+	author = {Hu, Yan and Chen, Qingyu and Du, Jingcheng and Peng, Xueqing and Keloth, Vipina Kuttichi and Zuo, Xu and Zhou, Yujia and Li, Zehan and Jiang, Xiaoqian and Lu, Zhiyong and Roberts, Kirk and Xu, Hua},
+	year = {2024},
+	month = {09},
+	date = {2024-09-01},
+	journal = {Journal of the American Medical Informatics Association},
+	pages = {1812--1820},
+	volume = {31},
+	number = {9},
+	doi = {10.1093/jamia/ocad259},
+	url = {https://doi.org/10.1093/jamia/ocad259}
+}
+
+@article{sciannameo2024,
+	title = {Information extraction from medical case reports using OpenAI InstructGPT},
+	author = {Sciannameo, Veronica and Pagliari, Daniele Jahier and Urru, Sara and Grimaldi, Piercesare and Ocagli, Honoria and Ahsani-Nasab, Sara and Comoretto, Rosanna Irene and Gregori, Dario and Berchialla, Paola},
+	year = {2024},
+	month = {10},
+	date = {2024-10-01},
+	journal = {Computer Methods and Programs in Biomedicine},
+	pages = {108326},
+	volume = {255},
+	doi = {10.1016/j.cmpb.2024.108326},
+	url = {https://www.sciencedirect.com/science/article/pii/S0169260724003195}
+}
+
+@article{schilling-wilhelmi2025,
+	title = {From text to insight: large language models for chemical data extraction},
+	author = {Schilling-Wilhelmi, Mara and {Ríos-García}, {Martiño} and Shabih, Sherjeel and {Victoria Gil}, {María} and Miret, Santiago and {T. Koch}, Christoph and {A. Márquez}, {José} and {Maik Jablonka}, Kevin},
+	year = {2025},
+	date = {2025},
+	journal = {Chemical Society Reviews},
+	pages = {1125--1150},
+	volume = {54},
+	number = {3},
+	doi = {10.1039/D4CS00913D},
+	url = {https://pubs.rsc.org/en/content/articlelanding/2025/cs/d4cs00913d},
+	note = {Publisher: Royal Society of Chemistry},
+	langid = {en}
+}
+
+@article{gupta2024,
+	title = {Data extraction from polymer literature using large language models},
+	author = {Gupta, Sonakshi and Mahmood, Akhlak and Shetty, Pranav and Adeboye, Aishat and Ramprasad, Rampi},
+	year = {2024},
+	month = {12},
+	date = {2024-12-19},
+	journal = {Communications Materials},
+	pages = {269},
+	volume = {5},
+	number = {1},
+	doi = {10.1038/s43246-024-00708-9},
+	url = {https://www.nature.com/articles/s43246-024-00708-9},
+	note = {Publisher: Nature Publishing Group},
+	langid = {en}
+}
+
+@inproceedings{li2024,
+	title = {Proceedings of the 1st Workshop on Natural Language Processing Meets Climate Change (ClimateNLP 2024)},
+	author = {Li, Ni and Zahra, Shorouq and Brito, Mariana and Flynn, Clare and {Görnerup}, Olof and Worou, Koffi and Kurfali, Murathan and Meng, Chanjuan and Thiery, Wim and Zscheischler, Jakob and Messori, Gabriele and Nivre, Joakim},
+	year = {2024},
+	date = {2024},
+	publisher = {Association for Computational Linguistics},
+	pages = {93--110},
+	doi = {10.18653/v1/2024.climatenlp-1.7},
+	url = {https://aclanthology.org/2024.climatenlp-1.7},
+	address = {Bangkok, Thailand},
+	langid = {en}
+}
+
+@inproceedings{baddour2024,
+	title = {2024 IEEE 12th International Conference on Intelligent Systems (IS)},
+	author = {Baddour, Moussa and Paquelet, {Stéphane} and Rollier, Paul and De Tayrac, Marie and Dameron, Olivier and Labbe, Thomas},
+	year = {2024},
+	month = {08},
+	date = {2024-08},
+	pages = {1--8},
+	doi = {10.1109/IS61756.2024.10705235},
+	url = {https://ieeexplore.ieee.org/abstract/document/10705235},
+	note = {ISSN: 2767-9802}
+}
+
+@article{gu2025,
+	title = {Scalable information extraction from free text electronic health records using large language models},
+	author = {Gu, Bowen and Shao, Vivian and Liao, Ziqian and Carducci, Valentina and Brufau, Santiago Romero and Yang, Jie and Desai, Rishi J.},
+	year = {2025},
+	month = {01},
+	date = {2025-01-28},
+	journal = {BMC Medical Research Methodology},
+	pages = {23},
+	volume = {25},
+	number = {1},
+	doi = {10.1186/s12874-025-02470-z},
+	url = {https://doi.org/10.1186/s12874-025-02470-z},
+	langid = {en}
+}
+
+@article{lafferty,
+	title = {Conditional Random Fields: Probabilistic Models for Segmenting and Labeling Sequence Data},
+	author = {Lafferty, John and McCallum, Andrew and Pereira, Fernando},
+	langid = {en}
+}
+
+@inproceedings{mikolov2013,
+	title = {Distributed Representations of Words and Phrases and their Compositionality},
+	author = {Mikolov, Tomas and Sutskever, Ilya and Chen, Kai and Corrado, Greg S and Dean, Jeff},
+	year = {2013},
+	date = {2013},
+	publisher = {Curran Associates, Inc.},
+	volume = {26},
+	url = {https://papers.nips.cc/paper_files/paper/2013/hash/9aa42b31882ec039965f3c4923ce901b-Abstract.html}
+}
+
+@inproceedings{devlin2019,
+	title = {NAACL-HLT 2019},
+	author = {Devlin, Jacob and Chang, Ming-Wei and Lee, Kenton and Toutanova, Kristina},
+	editor = {Burstein, Jill and Doran, Christy and Solorio, Thamar},
+	year = {2019},
+	month = {06},
+	date = {2019-06},
+	publisher = {Association for Computational Linguistics},
+	pages = {4171{\textendash}4186},
+	doi = {10.18653/v1/N19-1423},
+	url = {https://aclanthology.org/N19-1423/},
+	address = {Minneapolis, Minnesota}
+}
+
+@article{nadeau2007,
+	title = {A survey of named entity recognition and classification},
+	author = {Nadeau, David and Sekine, Satoshi},
+	year = {2007},
+	month = {01},
+	date = {2007-01-01},
+	journal = {Lingvisticæ Investigationes},
+	pages = {3--26},
+	volume = {30},
+	number = {1},
+	doi = {10.1075/li.30.1.03nad},
+	url = {https://www.jbe-platform.com/content/journals/10.1075/li.30.1.03nad},
+	note = {Publisher: John Benjamins},
+	langid = {en}
+}
+
+@article{polak2024,
+	title = {Extracting accurate materials data from research papers with conversational language models and prompt engineering},
+	author = {Polak, Maciej P. and Morgan, Dane},
+	year = {2024},
+	month = {02},
+	date = {2024-02-21},
+	journal = {Nature Communications},
+	pages = {1569},
+	volume = {15},
+	number = {1},
+	doi = {10.1038/s41467-024-45914-8},
+	url = {https://www.nature.com/articles/s41467-024-45914-8},
+	note = {Publisher: Nature Publishing Group},
+	langid = {en}
+}
+
+@article{kandel2012,
+	title = {Enterprise Data Analysis and Visualization: An Interview Study},
+	author = {Kandel, Sean and Paepcke, Andreas and Hellerstein, Joseph M. and Heer, Jeffrey},
+	year = {2012},
+	month = {12},
+	date = {2012-12},
+	journal = {IEEE Transactions on Visualization and Computer Graphics},
+	pages = {2917--2926},
+	volume = {18},
+	number = {12},
+	doi = {10.1109/TVCG.2012.219},
+	url = {https://ieeexplore.ieee.org/document/6327298}
+}
+
+@article{wicherts2016,
+	title = {Degrees of Freedom in Planning, Running, Analyzing, and Reporting Psychological Studies: A Checklist to Avoid p-Hacking},
+	author = {Wicherts, Jelte M. and Veldkamp, Coosje L. S. and Augusteijn, Hilde E. M. and Bakker, Marjan and van Aert, Robbie C. M. and van Assen, Marcel A. L. M.},
+	year = {2016},
+	month = {11},
+	date = {2016-11-25},
+	journal = {Frontiers in Psychology},
+	volume = {7},
+	doi = {10.3389/fpsyg.2016.01832},
+	url = {https://www.frontiersin.org/journals/psychology/articles/10.3389/fpsyg.2016.01832/full},
+	note = {Publisher: Frontiers},
+	langid = {English}
+}
+
+@article{simmons2011,
+	title = {False-Positive Psychology: Undisclosed Flexibility in Data Collection and Analysis Allows Presenting Anything as Significant},
+	author = {Simmons, Joseph P. and Nelson, Leif D. and Simonsohn, Uri},
+	year = {2011},
+	month = {11},
+	date = {2011-11-01},
+	journal = {Psychological Science},
+	pages = {1359--1366},
+	volume = {22},
+	number = {11},
+	doi = {10.1177/0956797611417632},
+	url = {https://doi.org/10.1177/0956797611417632},
+	note = {Publisher: SAGE Publications Inc},
+	langid = {EN}
+}
+
+@inproceedings{pang2022,
+	title = {CHI '22: CHI Conference on Human Factors in Computing Systems},
+	author = {Pang, Yuren and Reinecke, Katharina and Just, {René}},
+	year = {2022},
+	month = {04},
+	date = {2022-04-29},
+	publisher = {ACM},
+	pages = {1--15},
+	doi = {10.1145/3491102.3517707},
+	url = {https://dl.acm.org/doi/10.1145/3491102.3517707},
+	address = {New Orleans LA USA},
+	langid = {en}
+}
+
+@article{baldwin2022,
+	title = {Protecting against researcher bias in secondary data analysis: challenges and potential solutions},
+	author = {Baldwin, Jessie R. and Pingault, Jean-Baptiste and Schoeler, Tabea and Sallis, Hannah M. and {Munafò}, Marcus R.},
+	year = {2022},
+	month = {01},
+	date = {2022-01-01},
+	journal = {European Journal of Epidemiology},
+	pages = {1--10},
+	volume = {37},
+	number = {1},
+	doi = {10.1007/s10654-021-00839-0},
+	url = {https://doi.org/10.1007/s10654-021-00839-0},
+	langid = {en}
+}
+
+@inproceedings{kale2019,
+	title = {Decision-Making Under Uncertainty in Research Synthesis: Designing for the Garden of Forking Paths},
+	author = {Kale, Alex and Kay, Matthew and Hullman, Jessica},
+	year = {2019},
+	month = {05},
+	date = {2019-05-02},
+	publisher = {Association for Computing Machinery},
+	pages = {1{\textendash}14},
+	series = {CHI '19},
+	doi = {10.1145/3290605.3300432},
+	url = {https://dl.acm.org/doi/10.1145/3290605.3300432},
+	address = {New York, NY, USA}
+}
+
+@inproceedings{simson2025,
+	title = {Preventing Harmful Data Practices by using Participatory Input to Navigate the Machine Learning Multiverse},
+	author = {Simson, Jan and Draxler, Fiona and Mehr, Samuel and Kern, Christoph},
+	year = {2025},
+	month = {04},
+	date = {2025-04-25},
+	publisher = {Association for Computing Machinery},
+	pages = {1{\textendash}30},
+	series = {CHI '25},
+	doi = {10.1145/3706598.3713482},
+	url = {https://dl.acm.org/doi/10.1145/3706598.3713482},
+	address = {New York, NY, USA}
+}
+
+@inproceedings{kale2023,
+	title = {MetaExplorer : Facilitating Reasoning with Epistemic Uncertainty in Meta-analysis},
+	author = {Kale, Alex and Lee, Sarah and Goan, Terrance and Tipton, Elizabeth and Hullman, Jessica},
+	year = {2023},
+	month = {04},
+	date = {2023-04-19},
+	publisher = {Association for Computing Machinery},
+	pages = {1{\textendash}14},
+	series = {CHI '23},
+	doi = {10.1145/3544548.3580869},
+	url = {https://dl.acm.org/doi/10.1145/3544548.3580869},
+	address = {New York, NY, USA}
+}
+
+@article{götz2024,
+	title = {The multiverse of universes: A tutorial to plan, execute and interpret multiverses analyses using the R package multiverse},
+	author = {{Götz}, Martin and Sarma, Abhraneel and {O'Boyle}, Ernest H.},
+	year = {2024},
+	date = {2024},
+	journal = {International Journal of Psychology},
+	pages = {1003--1014},
+	volume = {59},
+	number = {6},
+	doi = {10.1002/ijop.13229},
+	url = {https://onlinelibrary.wiley.com/doi/abs/10.1002/ijop.13229},
+	note = {{\_}eprint: https://onlinelibrary.wiley.com/doi/pdf/10.1002/ijop.13229},
+	langid = {en}
+}
+
+@inproceedings{jun2019,
+	title = {Tea: A High-level Language and Runtime System for Automating Statistical Analysis},
+	author = {Jun, Eunice and Daum, Maureen and Roesch, Jared and Chasins, Sarah and Berger, Emery and Just, Rene and Reinecke, Katharina},
+	year = {2019},
+	month = {10},
+	date = {2019-10-17},
+	publisher = {Association for Computing Machinery},
+	pages = {591{\textendash}603},
+	series = {UIST '19},
+	doi = {10.1145/3332165.3347940},
+	url = {https://dl.acm.org/doi/10.1145/3332165.3347940},
+	address = {New York, NY, USA}
+}
+
+@inproceedings{jun2022,
+	title = {Tisane: Authoring Statistical Models via Formal Reasoning from Conceptual and Data Relationships},
+	author = {Jun, Eunice and Seo, Audrey and Heer, Jeffrey and Just, {René}},
+	year = {2022},
+	month = {04},
+	date = {2022-04-29},
+	publisher = {Association for Computing Machinery},
+	pages = {1{\textendash}16},
+	series = {CHI '22},
+	doi = {10.1145/3491102.3501888},
+	url = {https://dl.acm.org/doi/10.1145/3491102.3501888},
+	address = {New York, NY, USA}
+}
+
+@inproceedings{gu2023,
+	title = {Understanding and Supporting Debugging Workflows in Multiverse Analysis},
+	author = {Gu, Ken and Jun, Eunice and Althoff, Tim},
+	year = {2023},
+	month = {04},
+	date = {2023-04-19},
+	publisher = {Association for Computing Machinery},
+	pages = {1{\textendash}19},
+	series = {CHI '23},
+	doi = {10.1145/3544548.3581099},
+	url = {https://dl.acm.org/doi/10.1145/3544548.3581099},
+	address = {New York, NY, USA}
+}
+
+
+@inproceedings{jun2019,
+	title = {Tea: A High-level Language and Runtime System for Automating Statistical Analysis},
+	author = {Jun, Eunice and Daum, Maureen and Roesch, Jared and Chasins, Sarah and Berger, Emery and Just, Rene and Reinecke, Katharina},
+	year = {2019},
+	month = {10},
+	date = {2019-10-17},
+	publisher = {Association for Computing Machinery},
+	pages = {591{\textendash}603},
+	series = {UIST '19},
+	doi = {10.1145/3332165.3347940},
+	url = {https://dl.acm.org/doi/10.1145/3332165.3347940},
+	address = {New York, NY, USA}
 }
